<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="popular">Popular</string>
    <string name="by_new">New</string>
    <string name="relevant">Relevant</string>
    <string name="date">Date</string>
    <string name="choose_date">Choose date</string>
    <string name="language">Language</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="submit">Submit</string>
</resources>